--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,38 +6,35 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_inicio"
-            android:title="Inicio" />
+            android:icon="@drawable/home"
+            android:title="Inicio">
+
+
+        </item>
         <item
             android:id="@+id/nav_hombre"
+            android:icon="@drawable/man"
             android:title="Hombre" />
         <item
             android:id="@+id/nav_mujer"
+            android:icon="@drawable/woman"
             android:title="Mujer" />
         <item
             android:id="@+id/nav_gorras"
+            android:icon="@drawable/cap"
             android:title="Gorras" />
         <item
             android:id="@+id/nav_accesorios"
+            android:icon="@drawable/socks"
             android:title="Accesorios" />
         <item
             android:id="@+id/nav_liquidaciones"
+            android:icon="@drawable/tag"
             android:title="Liquidaciones" />
         <item
             android:id="@+id/nav_tools"
+            android:icon="@drawable/ic_menu_manage"
             android:title="Opciones" />
     </group>
-
-   <!-- <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>-->
 
 </menu>
