--- a/app/src/main/res/layout/fragment_carro_list.xml
+++ b/app/src/main/res/layout/fragment_carro_list.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/list2"
     android:name="calatayud.pablo.grimeystore.CarroFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +10,10 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="calatayud.pablo.grimeystore.CarroFragment"
-    tools:listitem="@layout/fragment_carro" />
+    tools:listitem="@layout/fragment_carro">
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</android.support.v7.widget.RecyclerView>
