Grid en HombreFragment en proceso pero casi acabado, base de datos hecha(se pueden añadir mas productos), queda saber implementar los datos de la dataBase en la App :D

--- a/app/src/main/res/layout/fragment_carro_list.xml
+++ b/app/src/main/res/layout/fragment_carro_list.xml
@@ -9,7 +9,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="calatayud.pablo.grimeystore.CarroFragment"
+    tools:context="calatayud.pablo.grimeystore.mFragments.CarroFragment"
     tools:listitem="@layout/fragment_carro">
 
     <ListView
