--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#0040ff</color>
     <color name="foreground_material_light">#ffffff</color>
     <color name="legacy_primary">#ffffff</color>
+    <color name="objetoGrid">#d8d8d8</color>
 </resources>
