--- a/app/src/main/res/layout/fragment_accesorios.xml
+++ b/app/src/main/res/layout/fragment_accesorios.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="calatayud.pablo.grimeystore.AccesoriosFragment">
+    tools:context="calatayud.pablo.grimeystore.mFragments.AccesoriosFragment">
 
 
 
