--- a/app/src/main/res/layout/fragment_hombre.xml
+++ b/app/src/main/res/layout/fragment_hombre.xml
@@ -1,9 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="calatayud.pablo.grimeystore.HombreFragment">
+    tools:context="calatayud.pablo.grimeystore.mFragments.HombreFragment">
 
+        <GridView
+            android:id="@+id/listaH"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnWidth="120dp"
+            android:numColumns="2"
+            android:verticalSpacing="8dp"
+            android:horizontalSpacing="8dp"
+            android:stretchMode="columnWidth"
+            android:gravity="center"/>
+    </LinearLayout>
 
-
-</FrameLayout>
